[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["liptao <limpa0099@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0"
numpy = "^1.23.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
